# ideaBox

./: .gitignore  Cargo.toml  README.md  components.d.ts  package.json  sqlite3.lib  vite.config.ts
Ib_dioxus/: Cargo.toml  Dioxus.toml
src/: App.vue  main.ts
src/types/: Item.ts  Respose.ts
src_tauri/: Cargo.toml  tauri.conf.json
src_tauri/icons/: idea.icns
src_tauri/src/: error.rs  lib.rs  main.rs  response.rs
src_tauri/src/entity/: mod.rs  prelude.rs  test_table.rs
src_tauri/src/handle/: mod.rs
